--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-123
+<!DOCTYPE html>
+
+			<html lang="en">
+	
+			<head>
+		
+			<meta charset="UTF-8">
+			<link rel="stylesheet" href="../css/实验.css">
+			<title>Future wars</title>
+			
+			<body>
+			    <div class="wrapper">
+			        <nav>
+			            <input type="radio" name="tab" id="home" checked>
+			            <input type="radio" name="tab" id="comment">
+			            <input type="radio" name="tab" id="envelope">
+			            <input type="radio" name="tab" id="heart">
+			            <input type="radio" name="tab" id="user">
+			            <label for="home" class="home">
+			                <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+			            </label>
+			            <label for="comment" class="comment">
+			                <a href="#"><i class="fa fa-comment" aria-hidden="true"></i>Download</a>
+			            </label>
+			            <label for="envelope" class="envelope">
+			                <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>Concerning</a>
+			            </label>
+			            <label for="heart" class="heart">
+			                <a href="#"><i class="fa fa-heart" aria-hidden="true"></i>User</a>
+			            </label>
+			            <label for="user" class="user">
+			                <a href="#"><i class="fa fa-user" aria-hidden="true"></i>Funded</a>
+			            </label>
+			            <div class="tab"></div>
+			        </nav>
+			    </div>
+			</body>
+			
+</html>
