--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<head>
 		
 			<meta charset="UTF-8">
-			<link rel="stylesheet" href="../css/实验.css">
+			<link rel="stylesheet" href="../css/style.css">
 			<title>Future wars</title>
 			
 			<body>
