--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<head>
 		
 			<meta charset="UTF-8">
-			<link rel="stylesheet" href="https://github.com/FTWS-qwq/futurewars/blob/main/style.css">
+			<link rel="stylesheet" href="https://ftws-qwq.github.io/css/">
 			<title>Future wars</title>
 			
 			<body>
