--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<head>
 		
 			<meta charset="UTF-8">
-			<link rel="stylesheet" href="https://ftws-qwq.github.io/css/">
+			<link rel="stylesheet" href="https://github.com/users/FTWS-qwq/projects/1#column-18531312">
 			<title>Future wars</title>
 			
 			<body>
