--- a/index.html
+++ b/index.html
@@ -17,44 +17,51 @@
 				}
 				
 					a{
+						position: relative;
+						display: inline-block;
+						padding: 1.2em 2em;
 						text-decoration: none;
-						color: black;
+						text-align: center;
+						cursor: pointer;
+						user-select: none;
 					}
 					.anniu{
-						width: 2cm;
-   						height: 1cm;
-   						background:linear-gradient(315deg, #89d8d3 0%, #03c8a8 74%);
-   						border: none;
-   						border-radius: 10px;
-   						font-weight: 500;
-    					font-size: 0.1mm;
-    					color: #fff;
-    					box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
-    					7px 7px 20px 0px rgba(0, 0, 0, .1),
-    					4px 4px 5px 0px rgba(0, 0, 0, .1);
-    					outline: none;
-    					position: relative;
-    					z-index: 0;
-					}
-					.anniu::before{
-    					position:absolute;
 						content: '';
-    					left: 0;
-    					bottom:0;
-    					width: 100%;
-    					height: 0;
-    					transition: all 0.3s ease;
-    					border-radius: 10px;
-    					background: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
-    					z-index: -1;
+						position: absolute;
+						top: 0;
+						left: 0;
+						bottom: 0;
+						right: 0;
+						background: linear-gradient(135deg, #6e8efb, #a777e3);
+						border-radius: 4px;
+						transition: box-shadow .5s ease, transform .2s ease; 
+						will-change: transform;
+						box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+						transform:
+						translateY(var(--ty, 0))
+						rotateX(var(--rx, 0))
+						rotateY(var(--ry, 0))
+						translateZ(var(--tz, -12px));
 					}
-					.anniu:hover::before{
-    					top: 0;
-    					height: 100%;
+	
+					.anniu:hover{
+						box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
 					}
-					.anniu:active{
-    					top: 2px;
+	
+					.anniu::after {
+						position: relative;
+						display: inline-block;
+						content: attr(data-title);
+						transition: transform .2s ease; 
+						font-weight: bold;
+						letter-spacing: .01em;
+						will-change: transform;
+						transform:
+						translateY(var(--ty, 0))
+						rotateX(var(--rx, 0))
+						rotateY(var(--ry, 0));
 					}
+
 
 					.box3{
 						
