--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     				background-color: #f2f2f2;
 					background-image: linear-gradient(25deg, #bbadff, #a2cbe1, #7ce6c3, #27ffa2)
 				}
+					.anniu{
+						width: 2cm;
+						height: 1cm;
+					}
 				
 					a{
 						position: relative;
