--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 			<html lang="en">
 			<head>
-
+			<link rel="shortcut icon" href="bitbug_favicon.ico" type="image/x-icon">
 			<meta charset="UTF-8">
 			<title>Future wars</title>
 
